@@ -3,6 +3,7 @@ package com.confirm.confirm.service;
 import com.confirm.confirm.dto.PostingCardDTO;
 import com.confirm.confirm.entity.HIRE;
 import com.confirm.confirm.repository.HireRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -12,14 +13,16 @@ import java.util.stream.Collectors;
 public class JobPostingService {
 
     private final HireRepository jobRepository;
-
+@Autowired
     public JobPostingService(HireRepository jobRepository) {
         this.jobRepository = jobRepository;
     }
 
     public List<PostingCardDTO> getAllJobs() {
         List<HIRE> jobList = jobRepository.findAll();
-
+        // jobList를 출력
+        System.out.println("list : ");
+        jobList.forEach(job -> System.out.println(job.toString()));
         // Job 리스트를 PostingCardDTO 리스트로 변환
         return jobList.stream()
                 .map(job -> new PostingCardDTO(
@@ -29,7 +32,9 @@ public class JobPostingService {
                         job.getIndustry(),
                         job.getPosition1(),
                         job.getPosition2()))
-                .collect(Collectors.toList());
+                .toList();
     }
+
+
 }
 
